linterの設定を追加

--- a/package.json
+++ b/package.json
@@ -21,5 +21,15 @@
   },
   "engines": {
     "node": "0.10.x"
+  },
+  "coffeelintConfig": {
+    "indentation" : {
+        "level" : "error",
+        "value" : 4
+    },
+    "line_endings" : {
+        "value" : "unix",
+        "level" : "error"
+    }
   }
 }
